# differential-coverage

./: .gitignore  .pre-commit-config.yaml  DEFINITIONS.md  README.md  differential_coverage.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml  publish.yml
.github/workflows/setup/: action.yml
sample_coverage/fuzzer_a/: t1.txt
src/differential_coverage/: __init__.py  api.py  approach_data.py  cli.py  files.py  fs.py  output.py  relcov.py  relscore.py  types.py
tests/: test_api.py  test_approach_data.py  test_cli.py  test_docs.py  test_output.py  test_reducers.py  test_sample_coverage.py
tests/sample_coverage/approach_a/: t2.txt
tests/sample_coverage/approach_c/: t2.txt
tests/sample_coverage/fuzzer_b/: t3.txt
tests/sample_coverage/fuzzer_c/: t1.txt
tests/sample_coverage/seeds/: t1.txt
