[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "differential_coverage"
version = "0.1.0"
description = "Compute differential coverage for fuzzer runs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Valentin Huber", email = "contact@valentinhuber.me" }]
keywords = ["fuzzing", "coverage", "differential-coverage"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.19.1", "pre-commit>=4.3.0", "pytest>=9.0.2", "ruff>=0.15.0"]

[project.urls]
Repository = "https://github.com/valentinhuber/differential_coverage"
Documentation = "https://github.com/valentinhuber/differential_coverage#readme"

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
differential_coverage = "differential_coverage:main"
