[build-system]
requires = ["setuptools>=80.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "differential_coverage"
version = "0.2.0"
description = "Compute differential coverage for fuzzer runs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Valentin Huber", email = "contact@valentinhuber.me" }]
keywords = ["fuzzing", "coverage", "differential-coverage"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.19.1", "pre-commit>=4.3.0", "pytest>=9.0.2", "ruff>=0.15.0"]

[project.urls]
Repository = "https://github.com/valentinhuber/differential_coverage"
Documentation = "https://github.com/valentinhuber/differential_coverage#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
differential-coverage = "differential_coverage:main"
